--- a/Develop/index.html
+++ b/Develop/index.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     </header>
-    <div class="hero"></div>
+    <div class="hero" alt="picture of horiseon team working around table"></div>
 
     <main>
         <section class="search-engine-optimization">
