--- a/Develop/index.html
+++ b/Develop/index.html
@@ -77,7 +77,7 @@
     <aside class="benefits">
       <div class="benefit">
         <h3>Lead Generation</h3>
-        <img src="./assets/images/lead-generation.png" />
+        <img src="./assets/images/lead-generation.png" class="center" />
         <p>
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
@@ -85,7 +85,7 @@
       </div>
       <div class="benefit">
         <h3>Brand Awareness</h3>
-        <img src="./assets/images/brand-awareness.png" />
+        <img src="./assets/images/brand-awareness.png" class="center" />
         <p>
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
@@ -93,9 +93,9 @@
       </div>
       <div class="benefit">
         <h3>Cost Management</h3>
-        <img src="./assets/images/cost-management.png" />
+        <img src="./assets/images/cost-management.png" class="center" />
         <p>
-          AAs the search ranking for your business increases, your advertising
+          As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
         </p>
       </div>
